@@ -1,6 +1,7 @@
 package com.arc.mpl.memory;
 
 import com.arc.mpl.project.RuntimePreferences;
+import com.arc.mpl.hir.MplType;
 
 import java.util.HashSet;
 import java.util.List;
@@ -13,20 +14,61 @@ import java.util.Set;
 public record PhysicalMemoryLayout(
     List<Segment> segments,
     Map<StorageKey, Allocation> allocations,
-    int physicalSlots
+    Map<String, ObjectPool> objectPools,
+    int physicalSlots,
+    int objectPoolSlots
 ) {
-    private static final PhysicalMemoryLayout EMPTY = new PhysicalMemoryLayout(List.of(), Map.of(), 0);
+    private static final PhysicalMemoryLayout EMPTY = new PhysicalMemoryLayout(List.of(), Map.of(), Map.of(), 0, 0);
+
+    public PhysicalMemoryLayout(List<Segment> segments, Map<StorageKey, Allocation> allocations, int physicalSlots) {
+        this(segments, allocations, Map.of(), physicalSlots, 0);
+    }
 
     public PhysicalMemoryLayout {
         segments = List.copyOf(Objects.requireNonNull(segments, "segments"));
-        allocations = Map.copyOf(Objects.requireNonNull(allocations, "allocations"));
-        if (physicalSlots < 0) throw new IllegalArgumentException("physicalSlots must be non-negative");
+        allocations = java.util.Collections.unmodifiableMap(
+            new java.util.LinkedHashMap<>(Objects.requireNonNull(allocations, "allocations")));
+        objectPools = java.util.Collections.unmodifiableMap(
+            new java.util.LinkedHashMap<>(Objects.requireNonNull(objectPools, "objectPools")));
+        if (physicalSlots < 0 || objectPoolSlots < 0 || objectPoolSlots > physicalSlots) {
+            throw new IllegalArgumentException("invalid physical/object-pool slot counts");
+        }
         if (segments.stream().map(Segment::alias).distinct().count() != segments.size()) {
             throw new IllegalArgumentException("physical Memory aliases must be unique");
         }
         int allocatedSlots = allocations.values().stream().mapToInt(Allocation::size).sum();
         if (allocatedSlots != physicalSlots) {
             throw new IllegalArgumentException("physicalSlots must equal the allocated slot count");
+        }
+        int pooledSlots = objectPools.values().stream().mapToInt(ObjectPool::slots).sum();
+        if (pooledSlots != objectPoolSlots) {
+            throw new IllegalArgumentException("objectPoolSlots must equal the object-pool allocation count");
+        }
+        for (Map.Entry<String, ObjectPool> entry : objectPools.entrySet()) {
+            ObjectPool pool = entry.getValue();
+            if (!entry.getKey().equals(pool.className())) {
+                throw new IllegalArgumentException("object-pool map key does not match its class");
+            }
+            if (!pool.occupancy().key().equals(objectPoolOccupancyKey(pool.className()))
+                || !pool.occupancy().equals(allocations.get(pool.occupancy().key()))) {
+                throw new IllegalArgumentException("object-pool occupancy is not part of the physical layout");
+            }
+            for (Map.Entry<String, PoolField> field : pool.fields().entrySet()) {
+                if (!field.getKey().equals(field.getValue().name())
+                    || !field.getValue().allocation().key().equals(
+                        objectPoolFieldKey(pool.className(), field.getValue().name()))
+                    || !field.getValue().allocation().equals(allocations.get(field.getValue().allocation().key()))) {
+                    throw new IllegalArgumentException("object-pool field is not part of the physical layout");
+                }
+            }
+        }
+        Set<Integer> handles = new HashSet<>();
+        for (ObjectPool pool : objectPools.values()) {
+            for (int slot = 0; slot < pool.capacity(); slot++) {
+                if (!handles.add(pool.handleBase() + slot)) {
+                    throw new IllegalArgumentException("object-pool handle ranges overlap");
+                }
+            }
         }
         Set<String> occupied = new HashSet<>();
         for (Map.Entry<StorageKey, Allocation> entry : allocations.entrySet()) {
@@ -63,6 +105,18 @@ public record PhysicalMemoryLayout(
         Allocation allocation = allocations.get(local);
         if (allocation == null && function != null) allocation = allocations.get(new StorageKey(null, variable));
         return Optional.ofNullable(allocation);
+    }
+
+    public Optional<ObjectPool> objectPool(String className) {
+        return Optional.ofNullable(objectPools.get(className));
+    }
+
+    public static StorageKey objectPoolOccupancyKey(String className) {
+        return new StorageKey("@objectPool:" + className, "occupancy");
+    }
+
+    public static StorageKey objectPoolFieldKey(String className, String field) {
+        return new StorageKey("@objectPool:" + className, field);
     }
 
     public long memoryCells() {
@@ -104,6 +158,46 @@ public record PhysicalMemoryLayout(
                 }
                 nextLogicalStart += slice.length();
             }
+        }
+    }
+
+    /** One class-specific unique-owner pool backed by compiler-allocated physical Memory. */
+    public record ObjectPool(String className, int capacity, int handleBase, Allocation occupancy,
+                             Map<String, PoolField> fields) {
+        public ObjectPool {
+            Objects.requireNonNull(className, "className");
+            Objects.requireNonNull(occupancy, "occupancy");
+            fields = java.util.Collections.unmodifiableMap(
+                new java.util.LinkedHashMap<>(Objects.requireNonNull(fields, "fields")));
+            if (capacity < 1 || handleBase < 0 || occupancy.size() != capacity) {
+                throw new IllegalArgumentException("invalid object-pool capacity or occupancy layout");
+            }
+            for (PoolField field : fields.values()) {
+                if (field.allocation().size() != Math.multiplyExact(capacity, field.width())) {
+                    throw new IllegalArgumentException("object-pool field allocation has the wrong size");
+                }
+            }
+        }
+
+        public int slots() {
+            int slots = occupancy.size();
+            for (PoolField field : fields.values()) slots = Math.addExact(slots, field.allocation().size());
+            return slots;
+        }
+
+        public PoolField field(String name) {
+            PoolField field = fields.get(name);
+            if (field == null) throw new IllegalArgumentException("unknown object-pool field: " + className + "." + name);
+            return field;
+        }
+    }
+
+    public record PoolField(String name, MplType type, int width, Allocation allocation) {
+        public PoolField {
+            Objects.requireNonNull(name, "name");
+            Objects.requireNonNull(type, "type");
+            Objects.requireNonNull(allocation, "allocation");
+            if (width < 1) throw new IllegalArgumentException("object-pool field width must be positive");
         }
     }
 
